--- a/MvcKompMvc4/MvcKompMvc4.csproj
+++ b/MvcKompMvc4/MvcKompMvc4.csproj
@@ -288,6 +288,8 @@
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Models\VisitorSiteModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceControllers\Home\HomeService.cs" />
+    <Compile Include="ServiceControllers\Shared\IHomeService.cs" />
     <Compile Include="Services\DataService.svc.cs">
       <DependentUpon>DataService.svc</DependentUpon>
     </Compile>
